# -Project-VIRUS-Intelligent-Robot-Design-and-Programming

./: 0601_deepface_face_detect.py  0601_deepface_friend_or_foe.py  LLM_conversation.py  LLM_function.py  QUICKSTART.md  README.md  README_elevenlabs_tts.md  ally_embeddings.pkl  audio_to_text.py  bt.py  client_face_parallel.py  client_vlm_parallel.py  client_vlm_parallel_alt.py  colab_vlm.py  colab_vlm_video.py  colab_vlm_video_for_mac.py  decibel_tester.py  elevenlabs_tts.py  env_template.txt  example_papers.json  fack_main_robot_controller.py  main.py  main_robot_controller.py  new_recognize.py  pi_exercise.py  pi_thread_exercise.py  recognize.py  requirements.txt  setup.py  test0602.py  test_minicpm.py  text_to_audio.py  train.py  vlmtest.py  vlmtest_cpp.py  전처리.py
georgia_tech/sgl-eval-peterhj-genserver/backend/: pyproject.toml
georgia_tech/sgl-eval-peterhj-genserver/backend/eval_next_backend/: __init__.py  consts.py  dependencies.py  main.py  models.py  utils.py
georgia_tech/sgl-eval-peterhj-genserver/backend/eval_next_backend/api_types/: __init__.py  benchmarks.py  leaderboard.py  questions.py
georgia_tech/sgl-eval-peterhj-genserver/backend/eval_next_backend/data_source/: fake_data_generator.py
georgia_tech/sgl-eval-peterhj-genserver/backend/eval_next_backend/routers/: benchmarks.py  leaderboard.py  questions.py
georgia_tech/sgl-eval-peterhj-genserver/generation-server/: README.md  pyproject.toml
georgia_tech/sgl-eval-peterhj-genserver/generation-server/eval_next_generation_server/: api_client.py  api_registry.py  main.py  server_config.py
(+13990 files in other folders)
